// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportIssueCaseEditor /> fallback case should render correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service/shopify/mystore1/preferences"
            >
              mystore1
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service/shopify/mystore1/preferences/report-issue"
            >
              Report Issue
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Edit case
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="page-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class="form"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-title"
              >
                Title
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-title"
                  placeholder="Condition title"
                  required=""
                  type="text"
                  value="Fallback"
                />
              </div>
            </div>
            <div
              class="InputField form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-description"
              >
                Description
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-description"
                  placeholder="Ex. Condition Condition applied when status is \\"delivered\\""
                  type="text"
                  value="Considered when no other conditions are met, for instance if the order status is unavailable or not listed in any of the cases above."
                />
              </div>
            </div>
            <fieldset
              class="fieldset"
            >
              <legend
                class="legend"
              >
                What reasons should be displayed?
              </legend>
              <div>
                <ul
                  class="reasonsWrapper"
                >
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      I'm past my expected delivery date
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      I'd like to change my shipping address
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      I'd like to edit my order
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      I forgot to apply my discount code
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      Other
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  class="mr-2 mb-2 btn btn-secondary"
                  type="button"
                >
                  <span
                    class="plusIcon material-icons"
                  >
                    add
                  </span>
                  Add new reason
                </button>
              </div>
            </fieldset>
            <div
              class="buttonsWrapper"
            >
              <div
                class="submitButtonWrapper"
                id="caseSubmitButtonWrapper"
              >
                <button
                  class="btn btn-success disabled"
                  disabled=""
                  type="submit"
                >
                  Save changes
                </button>
              </div>
              <button
                class="btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
            </div>
          </form>
        </div>
        <div
          class="col-auto"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReportIssueCaseEditor /> non-fallback case should render correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service/shopify/mystore1/preferences"
            >
              mystore1
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service/shopify/mystore1/preferences/report-issue"
            >
              Report Issue
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Edit case
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="page-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class="form"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-title"
              >
                Title
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-title"
                  placeholder="Condition title"
                  required=""
                  type="text"
                  value="Delivered"
                />
              </div>
            </div>
            <div
              class="InputField form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-description"
              >
                Description
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-description"
                  placeholder="Ex. Condition Condition applied when status is \\"delivered\\""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <fieldset
              class="fieldset"
            >
              <legend
                class="legend"
              >
                What reasons should be displayed?
              </legend>
              <div>
                <ul
                  class="reasonsWrapper"
                >
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      The items are different from what I ordered
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      I'm past my expected delivery date
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      My order was damaged in delivery
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                  <li
                    class="reasonRow"
                    style="opacity: 1;"
                  >
                    <div
                      class="dragIcon material-icons"
                    >
                      drag_indicator
                    </div>
                    <div
                      class="reasonText link-full-td"
                    >
                      Other
                    </div>
                    <button
                      class="deleteButton"
                      type="button"
                    >
                      <span
                        class="icon material-icons"
                      >
                        clear
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  class="mr-2 mb-2 btn btn-secondary"
                  type="button"
                >
                  <span
                    class="plusIcon material-icons"
                  >
                    add
                  </span>
                  Add new reason
                </button>
              </div>
            </fieldset>
            <fieldset
              class="fieldset"
            >
              <legend
                class="legend"
              >
                Conditions to display these errors
                <span
                  class="icon material-icons-outlined tooltipIcon"
                  id="conditionsInfoIcon"
                >
                  info
                </span>
              </legend>
              <div>
                <div
                  class="wrapper"
                >
                  <div
                    class="variable"
                  >
                    <img
                      alt="shopify logo"
                      class="shopifyLogo"
                      src="test-file-stub"
                    />
                    Shipment status
                  </div>
                  <div
                    class="operatorDropdown dropdown"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="dropdown-toggle btn btn-secondary"
                      type="button"
                    >
                      is one of
                    </button>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        is one of
                      </button>
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        is empty
                      </button>
                    </div>
                  </div>
                  <div
                    class="MultiSelectField"
                  >
                    <div
                      class="select MultiSelectFieldOpts"
                    >
                      <span
                        class="tag badge badge-secondary"
                        style="color: rgb(2, 117, 216);"
                      >
                        <span>
                          <span
                            class="badgeText"
                          >
                            Delivered
                          </span>
                          <i
                            class="material-icons ml-1 badgeClose"
                          >
                            close
                          </i>
                        </span>
                      </span>
                      <div
                        class="input-container"
                      >
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <input
                              class="input ml-2"
                              placeholder="Add items..."
                              value=""
                            />
                          </div>
                          <div
                            aria-hidden="true"
                            class="options dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Label printed
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Label purchased
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Attempted delivery
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Ready for pickup
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Confirmed
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                In transit
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Out for delivery
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                Failure
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="deleteButton"
                    type="button"
                  >
                    <span
                      class="icon material-icons"
                    >
                      clear
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="addConditionButton dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  Add condition
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <span
                    class="addConditionMenuHeader dropdown-item-text"
                    tabindex="-1"
                  >
                    <img
                      alt="shopify logo"
                      src="test-file-stub"
                    />
                    Shopify variables
                  </span>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Order status
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Fulfillment status
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Shipment status
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Financial status
                  </button>
                </div>
              </div>
            </fieldset>
            <div
              class="buttonsWrapper"
            >
              <div
                class="submitButtonWrapper"
                id="caseSubmitButtonWrapper"
              >
                <button
                  class="btn btn-success"
                  type="submit"
                >
                  Save changes
                </button>
              </div>
              <button
                class="btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="deleteButton btn btn-secondary"
                type="button"
              >
                <span
                  class="material-icons deleteButtonIcon"
                >
                  delete
                </span>
                 
                Delete
              </button>
            </div>
          </form>
        </div>
        <div
          class="col-auto"
        />
      </div>
    </div>
  </div>
</div>
`;
